--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@mui/material": "^5.11.15",
+    "axios": "^1.3.4",
     "esbuild": "^0.17.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
