--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.15",
     "axios": "^1.3.4",
     "esbuild": "^0.17.14",
